[gd_scene load_steps=41 format=2]

[ext_resource path="res://Scripts/HealthUIManager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Dark_MC_generique.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Robots/Enemy-final/MC-ANTECHRIST-all-sprites.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Robot1_sounds.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=39]

[sub_resource type="Animation" id=40]
resource_name = "DEATH"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=41]
resource_name = "Dos-hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 34 ]
}

[sub_resource type="Animation" id=42]
resource_name = "Dos-static"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 27, 28 ]
}

[sub_resource type="Animation" id=43]
resource_name = "Dos-tir"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=44]
resource_name = "Dos-walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 31 ]
}

[sub_resource type="Animation" id=45]
resource_name = "Droite-hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=46]
resource_name = "Droite-static"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=47]
resource_name = "Droite-tir"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=48]
resource_name = "Droite-walk"
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.72 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 5, 2 ]
}

[sub_resource type="Animation" id=49]
resource_name = "Face-hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=50]
resource_name = "Face-static"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=51]
resource_name = "Face-tir"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}

[sub_resource type="Animation" id=52]
resource_name = "Face-walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 13 ]
}

[sub_resource type="Animation" id=53]
resource_name = "Gauche-hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=54]
resource_name = "Gauche-static"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=55]
resource_name = "Gauche-tir"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=56]
resource_name = "Gauche-walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 22 ]
}

[sub_resource type="Animation" id=57]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "DEATH"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "Gauche-static"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "Droite-static"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "Face-static"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "Dos-static"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 58 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 59 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 60 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 61 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "Gauche-walk"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "Droite-walk"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "Face-walk"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "Dos-walk"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 62 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 63 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 64 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 65 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=66]
states/DEATH/node = SubResource( 36 )
states/DEATH/position = Vector2( 271, 180 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 260, 102 )
states/Walk/node = SubResource( 31 )
states/Walk/position = Vector2( 449, 111 )
transitions = [ "Idle", "Walk", SubResource( 32 ), "Walk", "Idle", SubResource( 33 ), "Idle", "DEATH", SubResource( 37 ), "Walk", "DEATH", SubResource( 38 ) ]
start_node = "Idle"
graph_offset = Vector2( -16, 18 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=67]

[node name="Dark_MC_generique" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="HealthUI" type="Node2D" parent="."]
position = Vector2( 2, -12 )
script = ExtResource( 1 )

[node name="RobotArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RobotArea"]
position = Vector2( 2, 11 )
scale = Vector2( 0.40625, 1.0957 )
polygon = PoolVector2Array( -24.6154, -17.3861, -24.6154, -2.78361, 14.7692, -2.78361, 14.7692, -17.3861 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 2, 11 )
scale = Vector2( 0.40625, 1.0957 )
polygon = PoolVector2Array( -24.6154, -17.3861, -24.6154, -2.78361, 14.7692, -2.78361, 14.7692, -17.3861 )

[node name="MovingTimer" type="Timer" parent="."]
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="DeathTimer" type="Timer" parent="."]

[node name="Robot1_sounds" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 39 )
texture = ExtResource( 3 )
hframes = 9
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DEATH = SubResource( 40 )
anims/Dos-hit = SubResource( 41 )
anims/Dos-static = SubResource( 42 )
anims/Dos-tir = SubResource( 43 )
anims/Dos-walk = SubResource( 44 )
anims/Droite-hit = SubResource( 45 )
anims/Droite-static = SubResource( 46 )
anims/Droite-tir = SubResource( 47 )
anims/Droite-walk = SubResource( 48 )
anims/Face-hit = SubResource( 49 )
anims/Face-static = SubResource( 50 )
anims/Face-tir = SubResource( 51 )
anims/Face-walk = SubResource( 52 )
anims/Gauche-hit = SubResource( 53 )
anims/Gauche-static = SubResource( 54 )
anims/Gauche-tir = SubResource( 55 )
anims/Gauche-walk = SubResource( 56 )
anims/RESET = SubResource( 57 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 66 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 67 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="RecoveryTimer" to="." method="_on_RecoveryTimer_timeout"]
